# wilhelm

./: .gitignore  CMakeLists.txt  vcpkg.install
include/: font.h  fps.h  hud.h  matrices.h  model.h  mouse.h  objLoader.h  shaders.h  stb_image.h  text.h  window.h
include/ui/: button.h
shaders/: TextVertexShader.vertexshader  model.vertexshader  ui.frag  ui.vert
src/: app.cpp  app.h  const.h  exit_codes.h  font.cpp  fps.cpp  fps.h  hud.cpp  hud.h  main.cpp  matrices.cpp  model.cpp  model.h  models.h  mouse.cpp  objLoader.cpp  shaders.cpp  structs.h  text.cpp  text.h  vertex.h  window.cpp
src/hud/: hud.cpp  hud.h  text.cpp  text.h
src/loader/: obj.cpp  obj.h
src/shaders/: shaders.cpp  shaders.h
src/ui/: button.cpp
tests/: loader.obj.cpp  obj.cpp
